objects/GeoAccessParameter__c.object
<CustomObject>
    <fields>
        <fullName>ARFGeoAccess__c</fullName>
        <label>ARF_GeoAccess</label>
        <referenceTo>ARF__c</referenceTo>
        <relationshipLabel>GeoAccess Parameters</relationshipLabel>
        <relationshipName>GeoAccess_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <label>General</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProviderGroup__c</fullName>
        <label>Provider Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult PCPs incl. Pediatricians within</fullName>
                </value>
                <value>
                    <fullName>Adult PCPs (Internal Med, General Prac, Family Prac) within</fullName>
                </value>
                <value>
                    <fullName>Pediatricians within</fullName>
                </value>
                <value>
                    <fullName>OB/GYNs within</fullName>
                </value>
                <value>
                    <fullName>Specialists within</fullName>
                </value>
                <value>
                    <fullName>Hospitals within</fullName>
                </value>
                <value>
                    <fullName>General Dentists within</fullName>
                </value>
                <value>
                    <fullName>Dental Specialists within</fullName>
                </value>
                <value>
                    <fullName>Endodontists within</fullName>
                </value>
                <value>
                    <fullName>Oral Surgeons within</fullName>
                </value>
                <value>
                    <fullName>Orthodontists within</fullName>
                </value>
                <value>
                    <fullName>Pedodontists within</fullName>
                </value>
                <value>
                    <fullName>Periodontists within</fullName>
                </value>
                <value>
                    <fullName>Prosthodontists within</fullName>
                </value>
                <value>
                    <fullName>General Vision Providers within</fullName>
                </value>
                <value>
                    <fullName>Opticians/Retail Outlets within</fullName>
                </value>
                <value>
                    <fullName>Ophthalmologists within</fullName>
                </value>
                <value>
                    <fullName>Optometrists within</fullName>
                </value>
                <value>
                    <fullName>National Network Pharmacies within</fullName>
                </value>
                <value>
                    <fullName>EAP Providers within</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rural__c</fullName>
        <label>Rural</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburban__c</fullName>
        <label>Suburban</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urban__c</fullName>
        <label>Urban</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofProviders__c</fullName>
        <label># of Providers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GeoAccess Parameter</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Geo Provider Group</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GeoAccess Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>